[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/editor/editor.gd" type="Script" id=1]
[ext_resource path="res://objects/map_objects/grass/grass_tileset.png" type="Texture" id=2]
[ext_resource path="res://objects/map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/map/map_tileset.tres" type="TileSet" id=4]

[node name="Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectTool" type="OptionButton" parent="."]
margin_right = 172.0
margin_bottom = 30.0
text = "Select Tool"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectTile" type="OptionButton" parent="."]
margin_left = 246.0
margin_right = 418.0
margin_bottom = 30.0
text = "Select Object"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprGridCursor" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 3
frame = 2
region_rect = Rect2( 0, 0, 32, 44 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[node name="DebugCamera" type="Camera2D" parent="."]
current = true

[node name="TileMapCursor" type="TileMap" parent="."]
modulate = Color( 0.443137, 0.0980392, 0.0980392, 1 )
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 16 )
format = 1
